# inpainting_with_joint_bilateral_filter

./: CMakeLists.txt
src/: main.cpp
